--- a/zuul/src/main/resources/application.properties
+++ b/zuul/src/main/resources/application.properties
@@ -5,3 +5,7 @@ eureka.client.fetch-registry=true
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka/}
 
 management.endpoints.web.exposure.include:routes
+
+security.oauth2.resource.user-info-uri: http://localhost:8088/user
+
+zuul.ignoredPatterns: /auth/**
